# ImTerm

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
example/: Application.cpp  Application.h  CMakeLists.txt  main.cpp  terminal_commands.cpp  terminal_commands.hpp
example/cmake/: SFML.cmake  common.cmake  config.cmake  fmt.cmake  imgui-sfml.cmake  opengl.cmake  spdlog.cmake
include/imterm/: misc.hpp  terminal.hpp  terminal.tpp  terminal_helpers.hpp
